@@ -7045,6 +7045,39 @@ name|emptySet
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|srsp
+operator|.
+name|getSolrResponse
+argument_list|()
+operator|.
+name|getResponse
+argument_list|()
+operator|==
+literal|null
+condition|)
+block|{
+name|NamedList
+name|response
+init|=
+operator|new
+name|NamedList
+argument_list|()
+decl_stmt|;
+name|response
+operator|.
+name|add
+argument_list|(
+literal|"STATUS"
+argument_list|,
+literal|"failed"
+argument_list|)
+expr_stmt|;
+return|return
+name|response
+return|;
+block|}
 name|String
 name|r
 init|=
